# nlp

./: .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml
agents/: __init__.py  accompaniment_agent.py  audio_mixing_agent.py  base_agent.py  integration_agent.py  lyric_analysis_agent.py  melody_generation_agent.py  singing_synthesis_agent.py
models/: __init__.py  lyric_analysis.py  melody.py  song.py
pipelines/: __init__.py  song_pipeline.py
utils/: __init__.py  audio_mixer.py  cerebras_client.py  music_utils.py  text_utils.py
