[project]
name = "song-composer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jieba>=0.42.1",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "music21>=9.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pypinyin>=0.49.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.1",
]
